# rust-snippet

./: .gitmodules  README.md
.github/workflows/: rust.yml
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
minigrep/src/: lib.rs  main.rs
the-book/: Cargo.toml  README.md
the-book/concurrent/src/: lib.rs
the-book/functional/: Cargo.toml
the-book/functional/src/: lib.rs
the-book/hello-cargo/: Cargo.toml
the-book/hello-cargo/src/: lib.rs
the-book/life-cycle/: Cargo.toml
the-book/life-cycle/src/: lib.rs
the-book/main/: Cargo.toml
the-book/main/src/: main.rs
the-book/oop/src/: lib.rs
the-book/pkgs-crate/: Cargo.toml
the-book/pkgs-crate/src/: back_of_house.rs  front_of_house.rs  lib.rs
the-book/tester/: Cargo.toml
the-book/tester/src/: lib.rs
the-book/tester/tests/: integration_test.rs
the-book/tester/tests/common/: mod.rs
web-server/src/: lib.rs  thread_pool.rs
web-server/static/: 404.html  index.html
