[package]
edition = "2018"
name = "main"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent = {path = "../concurrent"}
functional = {path = "../functional"}
hello-cargo = {path = "../hello-cargo"}
life-cycle = {path = "../life-cycle"}
oop = {path = "../oop"}
pkgs-crate = {path = "../pkgs-crate"}
rand = "0.8.3"
tester = {path = "../tester"}
